# Test_Task

./: .coverage  .coveragerc  .env_example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  load_data.py  pyproject.toml  requirements.txt  techtask.postman_collection
.github/workflows/: actions.yml
alembic/: env.py
alembic/versions/: 137856df7640_update_models.py  2ca765a2c00c_create_tables.py  3f24516f60af_fix_tables.py  8c66241abd45_fix_tables3.py  94c57196a9f8_fix_tables2.py  a76bf9c6ed50_update_tables.py
app/: __init__.py  commands.py  config.py  decorators.py  extensions.py  models.py
app/articles/: article.py
app/auth/: auth.py
app/routes/: __init__.py  article.py  auth.py  user.py
app/swagger/: swagger_config.yml
app/user/: user.py
sql_commands/: articles.sql
tests/: .coverage  conftest.py  test_article_routes.py  test_auth.py  test_user_routes.py
